# learn-claude-code-full-rewrite

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json
docs/: 重写总计划.md
docs/阶段记录/: 阶段-01-基础内核.md  阶段-02-任务系统.md  阶段-03-背景执行.md  阶段-04-多代理协同.md  阶段-05-上下文治理.md  阶段-06-安全与权限.md  阶段-07-可观测性.md  阶段-08-生产化收口.md  阶段流水.md  阶段进度索引.md
scripts/: run_api_smoke.sh  run_cli_smoke.sh
src/full_rewrite/: __init__.py  api.py  background_jobs.py  cli.py  context_governance.py  observability.py  phase_log.py  runtime.py  security_policy.py  task_board.py  team_coordination.py
tests/: test_api.py  test_background_jobs.py  test_cli.py  test_context_governance.py  test_observability.py  test_phase_log.py  test_runtime.py  test_security_policy.py  test_task_board.py  test_team_coordination.py
