[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-claude-code-full-rewrite"
version = "0.1.0"
description = "Staged full rewrite runtime inspired by learn-claude-code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
rewrite-agent = "full_rewrite.cli:main"
rewrite-api = "full_rewrite.api:main"

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
